test/test-files/analyzer/functions/errror-function-param-dyn-sized/exception.out
Semantic error in : ./test-files/analyzer/functions/errror-function-param-dyn-sized/source.spice:3:9:
Array size invalid: Types in parameter lists may not be dynamically sized

p print(int[SIZE][SIZE] grid) {
        ^^^^^^^^^^^^^^^